[tool.poetry]
name = "codereview"
version = "0.1.0"
description = "Intelligent code reviews powered by OpenAI"
authors = ["Eduardo Velasco <velasco810@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
actions-toolkit = "^0.1.15"
openai = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"